--- a/react-app/src/components/Trade/Trade.css
+++ b/react-app/src/components/Trade/Trade.css
@@ -74,7 +74,7 @@ tr {
 .trade-modal-button {
   position: absolute;
   right: 8;
-  margin-right: 50px;
+  margin-right: 56px;
 }
 
 
