--- a/react-app/src/components/auth/Auth.css
+++ b/react-app/src/components/auth/Auth.css
@@ -28,7 +28,6 @@
 }
 
 .signup-right {
-  width: 60%;
   justify-content: center;
 }
 
